--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -1,29 +1,38 @@
 ---
 export interface Props {
-  href: string;
-  className?: string;
-  ariaLabel?: string;
-  title?: string;
-  disabled?: boolean;
+    href: string;
+    className?: string;
+    ariaLabel?: string;
+    title?: string;
+    disabled?: boolean;
+    target?: "_blank" | "_parent" | "_self" | "_top";
 }
 
-const { href, className, ariaLabel, title, disabled = false } = Astro.props;
+const {
+    href,
+    className,
+    ariaLabel,
+    title,
+    disabled = false,
+    target = "_self",
+} = Astro.props;
 ---
 
 <a
-  type="button"
-  href={disabled ? "#" : href}
-  tabindex={disabled ? "-1" : "0"}
-  class={`group ${className}`}
-  aria-label={ariaLabel}
-  title={title}
-  aria-disabled={disabled}
+    type="button"
+    href={disabled ? "#" : href}
+    tabindex={disabled ? "-1" : "0"}
+    class={`group ${className}`}
+    aria-label={ariaLabel}
+    title={title}
+    aria-disabled={disabled}
+    target={target}
 >
-  <slot />
+    <slot />
 </a>
 
 <style>
-  a {
-    @apply hover:text-skin-accent;
-  }
+    a {
+        @apply hover:text-skin-accent;
+    }
 </style>
