--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -4,58 +4,65 @@ import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import Tag from "@components/Tag.astro";
 import Datetime from "@components/Datetime";
-import type { CollectionEntry } from "astro:content";
+import type { Blog } from "types/microcms";
 
 export interface Props {
-  post: CollectionEntry<"blog">;
+    post: Blog;
 }
 
 const { post } = Astro.props;
 
-const { title, author, description, ogImage, pubDatetime, tags } = post.data;
+const { title, description, eyecatch, publishedAt, tag, content } = post;
 
-const { Content } = await post.render();
-
-const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
-  .href;
+const ogUrl = new URL(
+    eyecatch ? eyecatch.url : `${title}.png`,
+    Astro.url.origin
+).href;
 ---
 
-<Layout title={title} author={author} description={description} ogImage={ogUrl}>
-  <Header />
-  <div class="mx-auto flex w-full max-w-3xl justify-start px-2">
-    <button
-      class="focus-outline mt-8 mb-2 flex hover:opacity-75"
-      onclick="history.back()"
-    >
-      <svg xmlns="http://www.w3.org/2000/svg"
-        ><path
-          d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
-        ></path>
-      </svg><span>Go back</span>
-    </button>
-  </div>
-  <main id="main-content">
-    <h1 class="post-title">{title}</h1>
-    <Datetime datetime={pubDatetime} size="lg" className="my-2" />
-    <article id="article" role="article" class="prose mx-auto mt-8 max-w-3xl">
-      <Content />
-    </article>
+<Layout title={title} description={description} ogImage={ogUrl}>
+    <Header />
+    <div class="mx-auto flex w-full max-w-3xl justify-start px-2">
+        <button
+            class="focus-outline mt-8 mb-2 flex hover:opacity-75"
+            onclick="history.back()"
+        >
+            <svg xmlns="http://www.w3.org/2000/svg"
+                ><path
+                    d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
+                ></path>
+            </svg><span>Go back</span>
+        </button>
+    </div>
+    <main id="main-content">
+        <h1 class="post-title">{title}</h1>
+        <Datetime datetime={publishedAt} size="lg" className="my-2" />
+        <article
+            id="article"
+            role="article"
+            class="prose mx-auto mt-8 max-w-3xl"
+        >
+            <div
+                set:html={content}
+                class="prose prose-lg max-w-none pt-10 pb-8"
+            />
+        </article>
 
-    <ul class="tags-container">
-      {tags.map(tag => <Tag name={tag} />)}
-    </ul>
-  </main>
-  <Footer />
+        <ul class="tags-container">
+            {tag.map(tag => <Tag tag={tag} />)}
+        </ul>
+    </main>
+    <Footer />
 </Layout>
 
 <style>
-  main {
-    @apply mx-auto w-full max-w-3xl px-4 pb-12;
-  }
-  .post-title {
-    @apply text-2xl font-semibold text-skin-accent;
-  }
-  .tags-container {
-    @apply my-8;
-  }
+    main {
+        @apply mx-auto w-full max-w-3xl px-4 pb-12;
+    }
+    .post-title {
+        @apply text-2xl font-semibold text-skin-accent;
+    }
+    .tags-container {
+        @apply my-8;
+    }
 </style>
