--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,58 +1,59 @@
 ---
-import { CollectionEntry, getCollection } from "astro:content";
 import Posts from "@layouts/Posts.astro";
 import PostDetails from "@layouts/PostDetails.astro";
-import getSortedPosts from "@utils/getSortedPosts";
 import getPageNumbers from "@utils/getPageNumbers";
-import slugify from "@utils/slugify";
 import { SITE } from "@config";
+import { getAllBlogs } from "@utils/api";
+import type { Blog } from "types/microcms";
 
 export interface Props {
-  post: CollectionEntry<"blog">;
+    post: Blog;
 }
 
 export async function getStaticPaths() {
-  const posts = await getCollection("blog", ({ data }) => !data.draft);
+    const blogResponse = await getAllBlogs();
+    const blogs = blogResponse.contents;
 
-  const postResult = posts.map(post => ({
-    params: { slug: slugify(post.data) },
-    props: { post },
-  }));
+    const postResult = blogs.map(blog => ({
+        params: { slug: blog.id },
+        props: { post: blog },
+    }));
 
-  const pagePaths = getPageNumbers(posts.length).map(pageNum => ({
-    params: { slug: String(pageNum) },
-  }));
+    const pagePaths = getPageNumbers(blogResponse.totalCount).map(pageNum => ({
+        params: { slug: String(pageNum) },
+    }));
 
-  return [...postResult, ...pagePaths];
+    // console.log({ pagePaths });
+
+    return [...postResult, ...pagePaths];
 }
 
 const { slug } = Astro.params;
 const { post } = Astro.props;
 
-const posts = await getCollection("blog");
+const blogResponse = await getAllBlogs();
+const blogs = blogResponse.contents;
 
-const sortedPosts = getSortedPosts(posts);
-
-const totalPages = getPageNumbers(sortedPosts.length);
+const totalPages = getPageNumbers(blogResponse.totalCount);
 
 const currentPage =
-  slug && !isNaN(Number(slug)) && totalPages.includes(Number(slug))
-    ? Number(slug)
-    : 0;
+    slug && !isNaN(Number(slug)) && totalPages.includes(Number(slug))
+        ? Number(slug)
+        : 0;
 const lastPost = currentPage * SITE.postPerPage;
 const startPost = lastPost - SITE.postPerPage;
 
-const paginatedPosts = sortedPosts.slice(startPost, lastPost);
+const paginatedPosts = blogs.slice(startPost, lastPost);
 ---
 
 {
-  post ? (
-    <PostDetails post={post} />
-  ) : (
-    <Posts
-      posts={paginatedPosts}
-      pageNum={currentPage}
-      totalPages={totalPages.length}
-    />
-  )
+    post ? (
+        <PostDetails post={post} />
+    ) : (
+        <Posts
+            posts={paginatedPosts}
+            pageNum={currentPage}
+            totalPages={totalPages.length}
+        />
+    )
 }
