--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -6,23 +6,24 @@ import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import Card from "@components/Card";
 import LinkButton from "@components/LinkButton.astro";
-import slugify from "@utils/slugify";
 import type { Blog } from "types/microcms";
 
 export interface Props {
     pageNum: number;
     totalPages: number;
     posts: Blog[];
+    type: "posts" | "tags";
+    tagId?: string;
 }
 
-const { pageNum, totalPages, posts } = Astro.props;
+const { pageNum, totalPages, posts, type, tagId } = Astro.props;
 
 const prev = pageNum > 1 ? "" : "disabled";
 const next = pageNum < totalPages ? "" : "disabled";
 ---
 
 <Layout title={`Posts | ${SITE.title}`}>
-    <Header activeNav="posts" />
+    <Header activeNav={type} />
     <Main pageTitle="Posts" pageDesc="All the articles I've posted.">
         <ul>
             {posts.map(blog => <Card href={`/posts/${blog.id}`} blog={blog} />)}
@@ -34,7 +35,7 @@ const next = pageNum < totalPages ? "" : "disabled";
             <nav class="pagination-wrapper" aria-label="Pagination">
                 <LinkButton
                     disabled={prev === "disabled"}
-                    href={`/posts${
+                    href={`/${type}${tagId ? "/" + tagId : ""}${
                         pageNum - 1 !== 1 ? "/" + (pageNum - 1) : ""
                     }`}
                     className={`mr-4 select-none ${prev}`}
@@ -50,7 +51,7 @@ const next = pageNum < totalPages ? "" : "disabled";
                 </LinkButton>
                 <LinkButton
                     disabled={next === "disabled"}
-                    href={`/posts/${pageNum + 1}`}
+                    href={`/${type}${tagId ? "/" + tagId : ""}/${pageNum + 1}`}
                     className={`ml-4 select-none ${next}`}
                     ariaLabel="Next"
                 >
