--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -56,6 +56,7 @@ const paginatedPosts = blogs.slice(startPost, lastPost);
             posts={paginatedPosts}
             pageNum={currentPage}
             totalPages={totalPages.length}
+            type="posts"
         />
     )
 }
