--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,5 +1,4 @@
 ---
-import { getCollection } from "astro:content";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import Layout from "@layouts/Layout.astro";
@@ -7,18 +6,20 @@ import Main from "@layouts/Main.astro";
 import Tag from "@components/Tag.astro";
 import getUniqueTags from "@utils/getUniqueTags";
 import { SITE } from "@config";
+import { MicroCMSUtils, microcmsFactory } from "@utils/microcms";
 
-const posts = await getCollection("blog");
-
-let tags = getUniqueTags(posts);
+const tagResponse = await MicroCMSUtils.getAllContents({
+    getListFn: microcmsFactory.tags.getList,
+});
+const tags = tagResponse.contents;
 ---
 
 <Layout title={`Tags | ${SITE.title}`}>
-  <Header activeNav="tags" />
-  <Main pageTitle="Tags" pageDesc="All the tags used in posts.">
-    <ul>
-      {tags.map(tag => <Tag name={tag} size="lg" />)}
-    </ul>
-  </Main>
-  <Footer />
+    <Header activeNav="tags" />
+    <Main pageTitle="Tags" pageDesc="All the tags used in posts.">
+        <ul>
+            {tags.map(tag => <Tag tag={tag} size="lg" />)}
+        </ul>
+    </Main>
+    <Footer />
 </Layout>
