--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -1,60 +1,66 @@
 ---
-// Remove current url path and remove trailing slash if exists
+// 現在のURLパスから現在のページを取得
+// 末尾にスラッシュがある場合は取り除く
 const currentUrlPath = Astro.url.pathname.replace(/\/+$/, "");
 
-// Get url array from path
-// eg: /tags/tailwindcss => ['tags', 'tailwindcss']
+// URLパスから配列を取得
+// 例：/tags/tailwindcss => ['tags', 'tailwindcss']
 const breadcrumbList = currentUrlPath.split("/").slice(1);
 
-// if breadcrumb is Home > Posts > 1 <etc>
-// replace Posts with Posts (page number)
+// breadcrumbがHome > Posts > 1 <etc>の場合は、PostsをPosts（ページ番号）に置き換える
 breadcrumbList[0] === "posts" &&
-  breadcrumbList.splice(0, 2, `Posts (page ${breadcrumbList[1] || 1})`);
+    breadcrumbList.splice(0, 2, `Posts (page ${breadcrumbList[1] || 1})`);
+
+// tag
+if (breadcrumbList[0] === "tags" && breadcrumbList[1]) {
+    breadcrumbList.splice(
+        1,
+        3,
+        `${breadcrumbList[1].toUpperCase()} (page ${breadcrumbList[2] || 1})`
+    );
+}
 ---
 
 <nav class="breadcrumb" aria-label="breadcrumb">
-  <ul>
-    <li>
-      <a href="/">Home</a>
-      <span aria-hidden="true">&#62;</span>
-    </li>
-    {
-      breadcrumbList.map((breadcrumb, index) =>
-        index + 1 === breadcrumbList.length ? (
-          <li>
-            <span
-              class={`${index > 0 ? "lowercase" : "capitalize"}`}
-              aria-current="page"
-            >
-              {/* make the last part lowercase in Home > Tags > some-tag */}
-              {breadcrumb}
-            </span>
-          </li>
-        ) : (
-          <li>
-            <a href={`/${breadcrumb}`}>{breadcrumb}</a>
+    <ul>
+        <li>
+            <a href="/">Home</a>
             <span aria-hidden="true">&#62;</span>
-          </li>
-        )
-      )
-    }
-  </ul>
+        </li>
+        {
+            breadcrumbList.map((breadcrumb, index) =>
+                index + 1 === breadcrumbList.length ? (
+                    <li>
+                        <span class="capitalize" aria-current="page">
+                            {/* Home > Tags > some-tagの場合は、最後の部分を小文字にする */}
+                            {breadcrumb}
+                        </span>
+                    </li>
+                ) : (
+                    <li>
+                        <a href={`/${breadcrumb}`}>{breadcrumb}</a>
+                        <span aria-hidden="true">&#62;</span>
+                    </li>
+                )
+            )
+        }
+    </ul>
 </nav>
 
 <style>
-  .breadcrumb {
-    @apply mx-auto mt-8 mb-1 w-full max-w-3xl px-4;
-  }
-  .breadcrumb ul li {
-    @apply inline;
-  }
-  .breadcrumb ul li a {
-    @apply capitalize opacity-70;
-  }
-  .breadcrumb ul li span {
-    @apply opacity-70;
-  }
-  .breadcrumb ul li:not(:last-child) a {
-    @apply hover:opacity-100;
-  }
+    .breadcrumb {
+        @apply mx-auto mt-8 mb-1 w-full max-w-3xl px-4;
+    }
+    .breadcrumb ul li {
+        @apply inline;
+    }
+    .breadcrumb ul li a {
+        @apply capitalize opacity-70;
+    }
+    .breadcrumb ul li span {
+        @apply opacity-70;
+    }
+    .breadcrumb ul li:not(:last-child) a {
+        @apply hover:opacity-100;
+    }
 </style>
