--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,10 @@
 ---
 import { LOGO_IMAGE, SITE } from "@config";
 import Hr from "./Hr.astro";
-import LinkButton from "./LinkButton.astro";
 
 import logoPNG from "/assets/logo.png";
 import logoSVG from "/assets/logo.svg";
+import TitleLogo from "./TitleLogo.astro";
 
 export interface Props {
     activeNav?: "posts" | "tags" | "about" | "search";
@@ -18,7 +18,7 @@ const { activeNav } = Astro.props;
     <div class="nav-container">
         <div class="top-nav-wrap">
             <a href="/" class="logo">
-                {
+                <!-- {
                     LOGO_IMAGE.enable ? (
                         <img
                             src={LOGO_IMAGE.svg ? logoSVG : logoPNG}
@@ -29,7 +29,8 @@ const { activeNav } = Astro.props;
                     ) : (
                         SITE.title
                     )
-                }
+                } -->
+                <TitleLogo />
             </a>
             <nav id="nav-menu">
                 <button
@@ -122,7 +123,7 @@ const { activeNav } = Astro.props;
 
 <style>
     #skip-to-content {
-        @apply absolute -top-full left-16 z-50 bg-skin-accent py-2 px-3 text-skin-inverted transition-all focus:top-4;
+        @apply absolute -top-full left-16 z-50 bg-skin-accent px-3 py-2 text-skin-inverted transition-all focus:top-4;
     }
     .nav-container {
         @apply mx-auto flex max-w-3xl flex-col items-center justify-between sm:flex-row;
@@ -144,7 +145,7 @@ const { activeNav } = Astro.props;
         @apply flex w-full flex-col items-center bg-skin-fill sm:ml-2 sm:flex-row sm:justify-end sm:space-x-4 sm:py-0;
     }
     nav ul {
-        @apply mt-4 grid w-44 grid-cols-2 grid-rows-4 gap-y-2 gap-x-2 sm:mt-0 sm:ml-0 sm:w-auto sm:gap-y-0 sm:gap-x-5;
+        @apply mt-4 grid w-44 grid-cols-2 grid-rows-4 gap-x-2 gap-y-2 sm:ml-0 sm:mt-0 sm:w-auto sm:gap-x-5 sm:gap-y-0;
     }
     nav ul li {
         @apply col-span-2 flex items-center justify-center;
@@ -157,7 +158,7 @@ const { activeNav } = Astro.props;
     }
     nav ul li:nth-child(4),
     nav ul li:nth-child(5) {
-        @apply col-span-1;
+        /* @apply col-span-1; */
     }
     nav a.active {
         @apply underline decoration-wavy decoration-2 underline-offset-4;
