--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -6,23 +6,25 @@ import Header from "@components/Header.astro";
 import Layout from "./Layout.astro";
 
 export interface Props {
-  frontmatter: {
-    title: string;
-    description?: string;
-  };
+    frontmatter: {
+        title: string;
+        description?: string;
+    };
 }
 
 const { frontmatter } = Astro.props;
 ---
 
 <Layout title={`${frontmatter.title} | ${SITE.title}`}>
-  <Header activeNav="about" />
-  <Breadcrumbs />
-  <main id="main-content">
-    <section id="about" class="prose mb-28 max-w-3xl prose-img:border-0">
-      <h1 class="text-2xl tracking-wider sm:text-3xl">{frontmatter.title}</h1>
-      <slot />
-    </section>
-  </main>
-  <Footer />
+    <Header activeNav="about" />
+    <Breadcrumbs />
+    <main id="main-content">
+        <section id="about" class="prose mb-28 max-w-3xl prose-img:border-0">
+            <h1 class="text-2xl tracking-wider sm:text-3xl">
+                {frontmatter.title}
+            </h1>
+            <slot />
+        </section>
+    </main>
+    <Footer />
 </Layout>
