add google aanalytics

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,21 @@ const socialImageURL = new URL(
 <!DOCTYPE html>
 <html lang="ja">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script
+            type="text/partytown"
+            src="https://www.googletagmanager.com/gtag/js?id=G-3JQ4REGXNK"
+        ></script>
+        <script type="text/partytown">
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag("js", new Date());
+            gtag("config", "G-3JQ4REGXNK");
+        </script>
+
+        <!--  -->
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
         <link rel="canonical" href={canonicalURL} />
