--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -14,10 +14,7 @@ const { post } = Astro.props;
 
 const { title, description, eyecatch, publishedAt, tag, content } = post;
 
-const ogUrl = new URL(
-    eyecatch ? eyecatch.url : `${title}.png`,
-    Astro.url.origin
-).href;
+const ogUrl = new URL(`${title}.png`, Astro.url.origin).href;
 ---
 
 <Layout title={title} description={description} ogImage={ogUrl}>
