--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -12,9 +12,9 @@ export interface Props {
 
 const { post } = Astro.props;
 
-const { title, description, eyecatch, publishedAt, tag, content } = post;
+const { id, title, description, eyecatch, publishedAt, tag, content } = post;
 
-const ogUrl = new URL(`${title}.png`, Astro.url.origin).href;
+const ogUrl = new URL(`/og/${id}.png`, Astro.url.origin).href;
 ---
 
 <Layout title={title} description={description} ogImage={ogUrl}>
