--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -38,7 +38,7 @@
         display: block;
     }
     body {
-        @apply flex min-h-screen flex-col bg-skin-fill font-mono text-skin-base
+        @apply flex min-h-screen flex-col bg-skin-fill font-noto text-skin-base
     selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
     }
     section,
