--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,3 +1,4 @@
+@import "/node_modules/highlight.js/styles/tomorrow-night-blue.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -70,7 +71,7 @@
     prose-code:rounded prose-code:bg-skin-card
     prose-code:bg-opacity-75 prose-code:p-1 prose-code:!text-skin-base
     prose-code:before:!content-[''] prose-code:after:!content-['']
-    prose-pre:!text-skin-base prose-ol:!text-skin-base
+    prose-pre:!bg-slate-700 prose-pre:!text-skin-pre prose-ol:!text-skin-base
     prose-ul:overflow-x-clip prose-ul:!text-skin-base prose-li:marker:!text-skin-accent
     prose-table:text-skin-base prose-th:border
     prose-th:border-skin-line prose-td:border
@@ -97,6 +98,9 @@
     }
     .prose h2#table-of-contents + p {
         @apply hidden;
+    }
+    .prose pre code {
+        @apply !text-skin-pre;
     }
 
     /* ===== scrollbar ===== */
