--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -74,7 +74,7 @@ const socialImageURL = new URL(
             color="#5bbad5"
         />
         <meta name="msapplication-TileColor" content="#b91d47" />
-        <meta name="theme-color" content="#ffffff" />
+        <meta name="theme-color" content="#f5dd7d" />
 
         <!-- General Meta Tags -->
         <title>{title}</title>
