--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -27,7 +27,7 @@ const { tag, size = "sm" } = Astro.props;
                 d="M16.018 3.815 15.232 8h-4.966l.716-3.815-1.964-.37L8.232 8H4v2h3.857l-.751 4H3v2h3.731l-.714 3.805 1.965.369L8.766 16h4.966l-.714 3.805 1.965.369.783-4.174H20v-2h-3.859l.751-4H21V8h-3.733l.716-3.815-1.965-.37zM14.106 14H9.141l.751-4h4.966l-.752 4z"
             ></path>
         </svg>
-        &nbsp;<span>{tag.name}</span>
+        &emsp;<span>{tag.name}</span>
     </a>
 </li>
 
@@ -37,5 +37,8 @@ const { tag, size = "sm" } = Astro.props;
     }
     a svg {
         @apply -mr-5 h-6 w-6 scale-95 text-skin-base opacity-80 group-hover:fill-skin-accent;
+    }
+    a span {
+        /* @apply pl-5; */
     }
 </style>
