--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -6,17 +6,20 @@
 @layer base {
     :root,
     html[data-theme="light"] {
-        --color-fill: 251, 254, 251;
+        --color-light: 0, 108, 172;
+
+        /* --color-fill: 251, 254, 251; */
+        --color-fill: 245, 243, 255;
         --color-text-base: 40, 39, 40;
         /* --color-accent: 0, 108, 172; */
-        --color-accent: 255, 127, 127;
+        --color-accent: var(--color-light);
         --color-card: 230, 230, 230;
         --color-card-muted: 205, 205, 205;
         --color-border: 236, 233, 233;
 
         --color-yase: 245, 221, 125;
-        --color-hongse: 255, 127, 127;
-        --color-title-logo: 255, 127, 127;
+        --color-hongse: var(--color-light);
+        --color-title-logo: var(--color-light);
     }
     html[data-theme="dark"] {
         --color-fill: 33, 39, 55;
