--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -22,6 +22,8 @@
         --color-title-logo: var(--color-light);
     }
     html[data-theme="dark"] {
+        --color-dark: 196, 185, 141;
+
         --color-fill: 33, 39, 55;
         --color-text-base: 234, 237, 243;
         --color-accent: 255, 107, 1;
@@ -29,9 +31,9 @@
         --color-card-muted: 138, 51, 2;
         --color-border: 171, 75, 8;
 
-        --color-yase: 196, 185, 141;
+        --color-yase: var(--color-dark);
         --color-hongse: 163, 50, 6;
-        --color-title-logo: 196, 185, 141;
+        --color-title-logo: var(--color-dark);
     }
     #sun-svg,
     html[data-theme="dark"] #moon-svg {
