--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ const { activeNav } = Astro.props;
 ---
 
 <header>
-    <a id="skip-to-content" href="#main-content">Skip to content</a>
+    <!-- <a id="skip-to-content" href="#main-content">Skip to content</a> -->
     <div class="nav-container">
         <div class="top-nav-wrap">
             <a href="/" class="logo" title="home">
