--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -74,7 +74,17 @@ const socialImageURL = new URL(
             color="#5bbad5"
         />
         <meta name="msapplication-TileColor" content="#b91d47" />
-        <meta name="theme-color" content="#f5dd7d" />
+        <meta name="theme-color" content="#006cac" />
+        <meta
+            name="theme-color"
+            media="(prefers-color-scheme: light)"
+            content="#006cac"
+        />
+        <meta
+            name="theme-color"
+            media="(prefers-color-scheme: dark)"
+            content="#a33206"
+        />
 
         <!-- General Meta Tags -->
         <title>{title}</title>
