--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -83,7 +83,7 @@ const socialImageURL = new URL(
         <meta
             name="theme-color"
             media="(prefers-color-scheme: dark)"
-            content="#ff6b01"
+            content="#e88c68"
         />
 
         <!-- General Meta Tags -->
