--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -74,16 +74,16 @@ const socialImageURL = new URL(
             color="#5bbad5"
         />
         <meta name="msapplication-TileColor" content="#b91d47" />
-        <meta name="theme-color" content="#006cac" />
+        <meta name="theme-color" content="#f5f3ff" />
         <meta
             name="theme-color"
             media="(prefers-color-scheme: light)"
-            content="#006cac"
+            content="#f5f3ff"
         />
         <meta
             name="theme-color"
             media="(prefers-color-scheme: dark)"
-            content="#e88c68"
+            content="#212737"
         />
 
         <!-- General Meta Tags -->
