--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -74,7 +74,7 @@ const socialImageURL = new URL(
             color="#5bbad5"
         />
         <meta name="msapplication-TileColor" content="#b91d47" />
-        <meta name="theme-color" content="#f5f3ff" />
+        <!-- <meta name="theme-color" content="#f5f3ff" />
         <meta
             name="theme-color"
             media="(prefers-color-scheme: light)"
@@ -84,7 +84,7 @@ const socialImageURL = new URL(
             name="theme-color"
             media="(prefers-color-scheme: dark)"
             content="#212737"
-        />
+        /> -->
 
         <!-- General Meta Tags -->
         <title>{title}</title>
