theme-color やっぱりダークモードの黒に統一

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -74,8 +74,8 @@ const socialImageURL = new URL(
             color="#5bbad5"
         />
         <meta name="msapplication-TileColor" content="#b91d47" />
-        <!-- <meta name="theme-color" content="#f5f3ff" />
-        <meta
+        <meta name="theme-color" content="#212737" />
+        <!-- <meta
             name="theme-color"
             media="(prefers-color-scheme: light)"
             content="#f5f3ff"
