add work, add @astro/image

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -20,6 +20,8 @@
         --color-yase: 245, 221, 125;
         --color-hongse: var(--color-light);
         --color-title-logo: var(--color-light);
+
+        --color-shadow: 0 0 0 / 0.1;
     }
     html[data-theme="dark"] {
         --color-dark: 196, 185, 141;
@@ -34,6 +36,8 @@
         --color-yase: var(--color-dark);
         --color-hongse: 163, 50, 6;
         --color-title-logo: var(--color-dark);
+
+        --color-shadow: 255 255 255 / 0.1;
     }
     #sun-svg,
     html[data-theme="dark"] #moon-svg {
