--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -22,7 +22,7 @@ const {
     type="button"
     href={disabled ? "#" : href}
     tabindex={disabled ? "-1" : "0"}
-    class={`group ${className}`}
+    class={`group ${className ?? ""}`}
     aria-label={ariaLabel}
     title={title}
     aria-disabled={disabled}
