--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -15,4 +15,19 @@ import WorkCard from "@components/WorkCard.astro";
         </ul>
     </Main>
     <Footer />
+    <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="0" width="0">
+        <defs>
+            <filter id="squiggle">
+                <feTurbulence
+                    type="fractalNoise"
+                    id="turbulence"
+                    baseFrequency=".05"
+                    numOctaves="4"></feTurbulence>
+                <feDisplacementMap
+                    id="displacement"
+                    in="SourceGraphic"
+                    scale="4"></feDisplacementMap>
+            </filter>
+        </defs>
+    </svg>
 </Layout>
