アイキャッチはいらんかなと思い削除しますた

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -14,7 +14,7 @@ export interface Props {
 
 const { post } = Astro.props;
 
-const { id, title, description, eyecatch, publishedAt, tag, content } = post;
+const { id, title, description, publishedAt, tag, content } = post;
 
 const ogUrl = new URL(`/og/${id}.png`, Astro.url.origin).href;
 
