--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -8,7 +8,7 @@ import WorkCard from "@components/WorkCard.astro";
 ---
 
 <Layout>
-    <Header />
+    <Header activeNav="works" />
     <Main pageTitle="Works" pageDesc={"₍₍ ᕕ( ˘ω˘ )ᕗ⁾⁾"}>
         <ul class="grid grid-cols-1 sm:grid-cols-2 gap-4">
             {worksData.reverse().map(work => <WorkCard work={work} />)}
