--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const blogResponse = await MicroCMSUtils.getContents({
 const socialCount = SOCIALS.filter(social => social.active).length;
 ---
 
-<Layout>
+<Layout zh={true}>
     <Header />
     <main id="main-content">
         <section id="hero">
