--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -1,4 +1,5 @@
 ---
+import { SITE } from "@config";
 import Layout from "@layouts/Layout.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
@@ -7,7 +8,7 @@ import worksData from "@assets/worksData";
 import WorkCard from "@components/WorkCard.astro";
 ---
 
-<Layout>
+<Layout title={`Works | ${SITE.title}`}>
     <Header activeNav="works" />
     <Main pageTitle="Works" pageDesc={"₍₍ ᕕ( ˘ω˘ )ᕗ⁾⁾"}>
         <ul class="grid grid-cols-1 sm:grid-cols-2 gap-4">
