--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,13 +4,14 @@ import Layout from "@layouts/Layout.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import LinkButton from "@components/LinkButton.astro";
+import GL404 from "@components/GL404";
 ---
 
 <Layout title={`404 Not Found | ${SITE.title}`}>
     <Header />
 
     <main id="main-content">
-        <div class="not-found-wrapper">
+        <!-- <div class="not-found-wrapper">
             <h1 aria-label="404 Not Found">404</h1>
             <span aria-hidden="true">¯\_(ツ)_/¯</span>
             <p>Page Not Found</p>
@@ -20,6 +21,9 @@ import LinkButton from "@components/LinkButton.astro";
             >
                 Go back home
             </LinkButton>
+        </div> -->
+        <div class="h-full">
+            <GL404 client:only />
         </div>
     </main>
 
@@ -28,7 +32,8 @@ import LinkButton from "@components/LinkButton.astro";
 
 <style>
     #main-content {
-        @apply mx-auto flex max-w-3xl flex-1 items-center justify-center;
+        /* @apply mx-auto flex max-w-3xl flex-1 items-center justify-center; */
+        @apply mx-auto max-w-3xl w-full h-auto py-5;
     }
     .not-found-wrapper {
         @apply mb-14 flex flex-col items-center justify-center;
