一旦自由落下まで

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,7 +4,7 @@ import Layout from "@layouts/Layout.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import LinkButton from "@components/LinkButton.astro";
-import GL404 from "@components/GL404";
+import GL404 from "@components/GL/GL404";
 ---
 
 <Layout title={`404 Not Found | ${SITE.title}`}>
