404スタイルリファクタ

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -33,7 +33,7 @@ import GL404 from "@components/GL/GL404";
 <style>
     #main-content {
         /* @apply mx-auto flex max-w-3xl flex-1 items-center justify-center; */
-        @apply mx-auto max-w-3xl w-full h-auto py-5;
+        @apply mx-auto  w-full h-auto py-5;
     }
     .not-found-wrapper {
         @apply mb-14 flex flex-col items-center justify-center;
