--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,13 +7,15 @@ import Hr from "@components/Hr.astro";
 import Card from "@components/Card";
 import Socials from "@components/Socials.astro";
 import { SOCIALS } from "@config";
-import { MicroCMSUtils, microcmsFactory } from "@utils/microcms";
+import slugify from "@utils/slugify";
 import Hitokoto from "@components/Hitokoto";
+import { getCollection } from "astro:content";
+import getSortedPosts from "@utils/getSortedPosts";
 
-const blogResponse = await MicroCMSUtils.getContents({
-    getListFn: microcmsFactory.blogs.getLatestList,
-    limit: 3,
-});
+const posts = await getCollection("blog");
+
+const sortedPosts = getSortedPosts(posts);
+const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
 
 const socialCount = SOCIALS.filter(social => social.active).length;
 ---
@@ -58,13 +60,16 @@ const socialCount = SOCIALS.filter(social => social.active).length;
             <h2>Recent Posts</h2>
             <ul>
                 {
-                    blogResponse.contents.map(blog => (
-                        <Card
-                            href={`/posts/${blog.id}`}
-                            blog={blog}
-                            secHeading={false}
-                        />
-                    ))
+                    sortedPosts.map(
+                        ({ data }, index) =>
+                            index < 4 && (
+                                <Card
+                                    href={`/posts/${slugify(data)}`}
+                                    frontmatter={data}
+                                    secHeading={false}
+                                />
+                            )
+                    )
                 }
             </ul>
             <div class="all-posts-btn-wrapper">
