--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -5,19 +5,19 @@ import Layout from "@layouts/Layout.astro";
 import Main from "@layouts/Main.astro";
 import Tag from "@components/Tag.astro";
 import { SITE } from "@config";
-import { MicroCMSUtils, microcmsFactory } from "@utils/microcms";
+import { getCollection } from "astro:content";
+import getUniqueTags from "@utils/getUniqueTags";
 
-const tagResponse = await MicroCMSUtils.getAllContents({
-    getListFn: microcmsFactory.tags.getList,
-});
-const tags = tagResponse.contents;
+const posts = await getCollection("blog");
+
+let tags = getUniqueTags(posts);
 ---
 
 <Layout title={`Tags | ${SITE.title}`}>
     <Header activeNav="tags" />
     <Main pageTitle="Tags" pageDesc="All the tags used in posts.">
         <ul>
-            {tags.map(tag => <Tag tag={tag} size="lg" />)}
+            {tags.map(tag => <Tag name={tag} size="lg" />)}
         </ul>
     </Main>
     <Footer />
