--- a/src/pages/tags/[tag]/index.astro
+++ b/src/pages/tags/[tag]/index.astro
@@ -5,6 +5,7 @@ import getPageNumbers from "@utils/getPageNumbers";
 import getPostsByTag from "@utils/getPostsByTag";
 import { getCollection } from "astro:content";
 import getUniqueTags from "@utils/getUniqueTags";
+import getSortedPosts from "@utils/getSortedPosts";
 
 export interface Props {
     tag: string;
@@ -27,10 +28,11 @@ const { tag } = Astro.props;
 const posts = await getCollection("blog", ({ data }) => !data.draft);
 
 const tagPosts = getPostsByTag(posts, tag);
+const sortedPosts = getSortedPosts(tagPosts);
 
-const totalPages = getPageNumbers(tagPosts.length);
+const totalPages = getPageNumbers(sortedPosts.length);
 
-const paginatedPosts = tagPosts.slice(0, SITE.postPerPage);
+const paginatedPosts = sortedPosts.slice(0, SITE.postPerPage);
 ---
 
 <Posts
