--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -6,13 +6,14 @@ import { SITE } from "@config";
 import { CollectionEntry, getCollection } from "astro:content";
 import slugify from "@utils/slugify";
 import getSortedPosts from "@utils/getSortedPosts";
+import { toggleDisplayDraft } from "@utils/helper";
 
 export interface Props {
     post: CollectionEntry<"blog">;
 }
 
 export async function getStaticPaths() {
-    const posts = await getCollection("blog", ({ data }) => !data.draft);
+    const posts = await getCollection("blog", toggleDisplayDraft);
 
     const postResult = posts.map(post => ({
         params: { slug: slugify(post.data) },
