--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,6 +5,7 @@ import Footer from "@components/Footer.astro";
 import Layout from "@layouts/Layout.astro";
 import { getCollection } from "astro:content";
 import { SITE } from "@config";
+import MyGL from "@components/GL/MyGL";
 
 // 本当はgetEntryBySlug()で取得したい
 const about = await getCollection("about");
@@ -18,6 +19,9 @@ const { Content } = await about[0].render();
     <main id="main-content">
         <section id="about" class="prose mb-28 max-w-3xl prose-img:border-0">
             <h1 class="text-2xl tracking-wider sm:text-3xl">About</h1>
+            <div class="h-96">
+                <MyGL client:only />
+            </div>
             <Content />
         </section>
     </main>
