--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -72,25 +72,25 @@
     sm:scale-110;
     }
     .prose {
+        /* 徐々にconfigで上書きする方式に移動せよ */
         @apply prose-headings:!mb-3 prose-headings:!text-skin-base
-    prose-h3:italic prose-p:!text-skin-base
-    prose-a:!text-skin-base prose-a:!decoration-dashed prose-a:underline-offset-8
-    hover:prose-a:text-skin-accent prose-blockquote:!border-l-skin-accent
-    prose-blockquote:border-opacity-50 prose-blockquote:!text-skin-base prose-blockquote:opacity-80
-    prose-figcaption:!text-skin-base prose-figcaption:opacity-70
-    prose-strong:!text-skin-base
+        prose-h3:italic prose-p:!text-skin-base
+        prose-a:!text-skin-base prose-a:!decoration-dashed prose-a:underline-offset-8
+        hover:prose-a:text-skin-accent prose-blockquote:!border-l-skin-accent
+        prose-blockquote:border-opacity-50 prose-blockquote:!text-skin-base prose-blockquote:opacity-80
+        prose-figcaption:!text-skin-base prose-figcaption:opacity-70
+        prose-strong:!text-skin-base
 
-
-    prose-code:rounded prose-code:bg-skin-card
-    prose-code:bg-opacity-75 prose-code:p-1 prose-code:!text-skin-base
-    prose-code:before:!content-[''] prose-code:after:!content-['']
-    prose-pre:!bg-slate-700 prose-pre:!text-skin-pre prose-ol:!text-skin-base
-    prose-ul:overflow-x-clip prose-ul:!text-skin-base prose-li:marker:!text-skin-accent
-    prose-table:text-skin-base prose-th:border
-    prose-th:border-skin-line prose-td:border
-    prose-td:border-skin-line prose-img:mx-auto
-    prose-img:!mb-2 prose-img:!mt-2 prose-img:inline prose-img:w-full prose-img:border-2
-    prose-img:border-skin-line prose-hr:!border-skin-line;
+        prose-code:rounded prose-code:bg-skin-card
+        prose-code:bg-opacity-75 prose-code:p-1 prose-code:!text-skin-base
+        prose-code:before:!content-[''] prose-code:after:!content-['']
+        prose-pre:!bg-slate-700 prose-pre:!text-skin-pre prose-ol:!text-skin-base
+        prose-ul:overflow-x-clip prose-ul:!text-skin-base
+        prose-table:text-skin-base prose-th:border
+        prose-th:border-skin-line prose-td:border
+        prose-td:border-skin-line prose-img:mx-auto
+        prose-img:!mb-2 prose-img:!mt-2 prose-img:inline prose-img:w-full prose-img:border-2
+        prose-img:border-skin-line prose-hr:!border-skin-line;
     }
     .prose a {
         @apply hover:!text-skin-accent;
